# SchedulerMultiDPU

./: CMakeLists.txt  README.md  main.cpp
files/input/: DPUs.txt  Workload_DenseNet.txt  Workload_MobileNet.txt  Workload_ResNet.txt  Workload_Uniform.txt  Workload_VGG.txt  avg_power.csv  runtimes.csv
files/output/: schedule_output_dpu.txt  schedule_output_idleEnergy.txt  schedule_output_shuffles.txt  schedule_output_total.txt
files/output/examples/W_DenseNet/: schedule_output_allocation.txt  schedule_output_dpu.txt  schedule_output_idleEnergy.txt  schedule_output_shuffles.txt  schedule_output_total.txt
files/output/examples/W_MobileNet/: schedule_output_allocation.txt  schedule_output_dpu.txt  schedule_output_idleEnergy.txt  schedule_output_shuffles.txt  schedule_output_total.txt
files/output/examples/W_ResNet/: schedule_output_allocation.txt  schedule_output_dpu.txt  schedule_output_idleEnergy.txt  schedule_output_shuffles.txt  schedule_output_total.txt
files/output/examples/W_Uniform/: schedule_output_allocation.txt  schedule_output_dpu.txt  schedule_output_idleEnergy.txt  schedule_output_shuffles.txt  schedule_output_total.txt
files/output/examples/W_VGG/: schedule_output_allocation.txt  schedule_output_dpu.txt  schedule_output_idleEnergy.txt  schedule_output_total.txt
inc/: datatypes.h  functions.h
src/: functions.cpp  main.cpp
